Added plot ratio and the right point to call CMS_Lumi to put that information in the right place. ratio plot is not validated however

--- a/ROOTPlotTest.ipynb
+++ b/ROOTPlotTest.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "9be614e2-b8c1-4772-8711-1eb85e823e03",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "id": "12c7a0f2-9fe4-46a7-8640-7fa5ace0c997",
    "metadata": {},
    "outputs": [
@@ -214,42 +214,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "process: dy_M-100To200\n",
-      "DY activated\n",
-      "process: dy_M-50\n",
-      "Ewk activated\n",
       "process: data_A\n",
       "data activated\n",
-      "process: data_B\n",
-      "data activated\n",
-      "process: data_C\n",
-      "VV activated\n",
-      "process: data_D\n",
-      "data activated\n",
-      "process: ttjets_dl\n",
-      "top activated\n",
-      "process: ttjets_sl\n",
-      "other activated\n",
-      "process: ggh_powheg\n",
-      "ggH activated\n",
       "process: vbf_powheg\n",
-      "VBF activated\n"
+      "VBF activated\n",
+      "process: dy_M-50\n",
+      "Ewk activated\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_DY (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_Ewk (Potential memory leak).\n",
       "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_VV (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_Top (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_other (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_ggH (Potential memory leak).\n",
-      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_VBF (Potential memory leak).\n"
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_VBF (Potential memory leak).\n",
+      "Warning in <TROOT::Append>: Replacing existing TH1: jet1_pt_hist_Ewk (Potential memory leak).\n"
      ]
     }
    ],
@@ -257,8 +236,8 @@
     "import json\n",
     "with open(\"./histogram/plot_settings.json\", \"r\") as file:\n",
     "    plot_settings = json.load(file)\n",
-    "# available_processes = [\"data_A\",\"vbf_powheg\"]\n",
-    "available_processes = [\"dy_M-100To200\", \"dy_M-50\",\"data_A\", \"data_B\", \"data_C\", \"data_D\", \"ttjets_dl\", \"ttjets_sl\", \"ggh_powheg\",\"vbf_powheg\"]\n",
+    "available_processes = [\"data_A\",\"vbf_powheg\", \"dy_M-50\"]\n",
+    "# available_processes = [\"dy_M-100To200\", \"dy_M-50\",\"data_A\", \"data_B\", \"data_C\", \"data_D\", \"ttjets_dl\", \"ttjets_sl\", \"ggh_powheg\",\"vbf_powheg\"]\n",
     "load_path = \"/depot/cms/users/yun79/results/stage1/test_full\"\n",
     "load_path = load_path + f\"/f0_1\"\n",
     "\n",
@@ -367,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "79b8e1b5-7870-4a31-ad6f-d553fb983f2c",
    "metadata": {},
    "outputs": [
@@ -385,7 +364,7 @@
     "dummy_hist.GetXaxis().SetTitleSize(0);\n",
     "dummy_hist.GetXaxis().SetLabelSize(0);\n",
     "dummy_hist.GetXaxis().SetTitle(\"obs\");\n",
-    "# dummy_hist.GetYaxis().SetRangeUser(0.01,10e9);\n",
+    "dummy_hist.GetYaxis().SetRangeUser(0.01,1e9);\n",
     "dummy_hist.SetTitle(\"Events\")\n",
     "dummy_hist.Draw(\"EP\");\n",
     "\n",
@@ -440,42 +419,105 @@
     "\n",
     "# aggregate all MC hist by stacking them and then plot\n",
     "all_MC_hist_stacked = ROOT.THStack(\"all_MC_hist_stacked\", \"\");\n",
+    "# ratio_den = ROOT.TH1F('all_MC_hist_stacked', \"\", len(binning)-1, min(binning), max(binning)) # all MC stacked, but for ratio plot because THStack isn't divide compatible\n",
+    "\n",
     "all_MC_hist_list.reverse() # add smallest histgrams first, so from other -> DY\n",
     "for MC_hist_stacked in all_MC_hist_list: \n",
     "    all_MC_hist_stacked.Add(MC_hist_stacked)\n",
+    "    # ratio_den.Add(MC_hist_stacked)\n",
     "all_MC_hist_stacked.Draw(\"hist same\");\n",
     "\n",
     "# stack and plot data \n",
-    "data_hist_stacked = group_data_hists[0]\n",
-    "if len(group_data_hists) > 1:\n",
-    "    for idx in range(1, len(group_data_hists)):\n",
-    "        data_hist_stacked.Add(group_data_hists[idx])\n",
+    "if len(group_data_hists) > 0:\n",
+    "    data_hist_stacked = group_data_hists[0]\n",
+    "    if len(group_data_hists) > 1:\n",
+    "        for idx in range(1, len(group_data_hists)):\n",
+    "            data_hist_stacked.Add(group_data_hists[idx])\n",
     "\n",
-    "data_hist_stacked.SetMarkerStyle(20);\n",
-    "data_hist_stacked.SetMarkerSize(1);\n",
-    "data_hist_stacked.SetMarkerColor(1);\n",
-    "data_hist_stacked.SetLineColor(1);\n",
-    "data_hist_stacked.Draw(\"EPsame\");        \n",
+    "    data_hist_stacked.SetMarkerStyle(20);\n",
+    "    data_hist_stacked.SetMarkerSize(1);\n",
+    "    data_hist_stacked.SetMarkerColor(1);\n",
+    "    data_hist_stacked.SetLineColor(1);\n",
+    "    data_hist_stacked.Draw(\"EPsame\");        \n",
     "\n",
     "\n",
     "# plot signals: ggH and VBF\n",
-    "\n",
-    "hist_ggH = group_ggH_hists[0]\n",
-    "hist_ggH.SetLineColor(ROOT.kBlack);\n",
-    "hist_ggH.SetLineWidth(3);\n",
-    "hist_ggH.Draw(\"hist same\");\n",
-    "\n",
-    "hist_VBF = group_VBF_hists[0]\n",
-    "hist_VBF.SetLineColor(ROOT.kRed);\n",
-    "hist_VBF.SetLineWidth(3);\n",
-    "hist_VBF.Draw(\"hist same\");\n",
-    "\n",
-    "\n"
+    "if len(group_ggH_hists) > 0:\n",
+    "    hist_ggH = group_ggH_hists[0]\n",
+    "    hist_ggH.SetLineColor(ROOT.kBlack);\n",
+    "    hist_ggH.SetLineWidth(3);\n",
+    "    hist_ggH.Draw(\"hist same\");\n",
+    "if len(group_VBF_hists) > 0:\n",
+    "    hist_VBF = group_VBF_hists[0]\n",
+    "    hist_VBF.SetLineColor(ROOT.kRed);\n",
+    "    hist_VBF.SetLineWidth(3);\n",
+    "    hist_VBF.Draw(\"hist same\");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
+   "id": "a1c79e8f-7fa2-4cb0-b30b-ff4084b67d62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for idx in range(len(binning)):\n",
+    "#     THStack_binval = all_MC_hist_stacked.GetStack().Last().GetBinContent(idx)\n",
+    "#     TH1F_binval = ratio_den.GetBinContent(idx)\n",
+    "#     # print(f\"THStack: {all_MC_hist_stacked.GetStack().Last().GetBinContent(idx)}\")\n",
+    "#     # print(f\"TH1F: {ratio_den.GetBinContent(idx)}\")\n",
+    "#     print(THStack_binval==TH1F_binval)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "63e86266-693b-4e5c-ac54-d3bdd8dab8ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ratio activated\n",
+      "Name: num_hist Title: jet1_pt NbinsX: 29\n",
+      "Name: jet1_pt_hist_Ewk Title: jet1_pt NbinsX: 29\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ratio pad\n",
+    "# canvas.cd()\n",
+    "pad2 = ROOT.TPad(\"pad2\",\"pad2\",0,0.,1,0.9);\n",
+    "pad2.SetFillColor(0);\n",
+    "pad2.SetGridy(1);\n",
+    "pad2.SetFillStyle(0);\n",
+    "pad2.SetTickx(1);\n",
+    "pad2.SetTicky(1);\n",
+    "pad2.SetTopMargin(0.7);\n",
+    "pad2.SetRightMargin(0.06);\n",
+    "pad2.Draw();\n",
+    "pad2.cd();\n",
+    "\n",
+    "if (len(group_data_hists) > 0) and (len(all_MC_hist_list) > 0):\n",
+    "    print(\"ratio activated\")\n",
+    "    num_hist = data_hist_stacked.Clone(\"num_hist\");\n",
+    "    den_hist = all_MC_hist_stacked.Clone(\"den_hist\").GetStack().Last(); # to get TH1F from THStack, one needs to call .GetStack().Last()\n",
+    "    print(num_hist)\n",
+    "    print(den_hist)\n",
+    "    num_hist.Divide(den_hist);\n",
+    "    num_hist.SetStats(ROOT.kFALSE);\n",
+    "    num_hist.SetLineColor(ROOT.kBlack);\n",
+    "    num_hist.SetMarkerColor(ROOT.kBlack);\n",
+    "    num_hist.SetMarkerSize(0.8);\n",
+    "    num_hist.Draw(\"PE1 SAME\");\n",
+    "    pad2.RedrawAxis(\"sameaxis\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "e3c218e4-98cb-4631-9c49-ca3464b0977c",
    "metadata": {},
    "outputs": [
@@ -511,37 +553,26 @@
     "    leg.AddEntry(hist_VBF,\"VBF\",\"L\")\n",
     "leg.Draw(\"same\");\n",
     "\n",
+    "# CMS_lumi(canvas, \"59.7\", up=True);\n",
+    "# CMS_lumi(canvas, \"59.7\", up=True, reduceSize=True);\n",
     "\n",
-    "\n",
-    "\n",
-    "CMS_lumi(canvas, \"59.7\");\n",
     "pad.RedrawAxis(\"sameaxis\");\n",
     "# CMS_lumi(canvas,\"137.2\");\n",
     "\n",
+    "\n",
     "# pad.RedrawAxis(\"sameaxis\");\n",
     "pad.cd();\n",
-    "dummy_hist.GetYaxis().SetRangeUser(0.01,10e9);\n",
     "pad.SetLogy();\n",
     "pad.Modified();\n",
     "pad.Update();\n",
+    "CMS_lumi(canvas, \"59.7\", up=True, reduceSize=True);\n",
     "pad.RedrawAxis(\"sameaxis\");\n",
     "canvas.SaveAs(\"test.pdf\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "50a695c2-8c1e-4f15-bf5a-3c60ae4021ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dummy_hist = data_hists[0].Clone(\"dummy_hist\");\n",
-    "# dummy_hist.GetBinContent(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "5d767a93-a9fe-46b3-b4bc-28ddd2659951",
    "metadata": {},
    "outputs": [],
@@ -551,14 +582,6 @@
     "# print(np_hist[len(edges)])\n",
     "# # max(edges)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba309b1c-dd3c-44f2-83d9-d4069561dc0c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
