--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "The chunksize value is simple: it is an integer value of \"chunks\" of rows of data that each worker works on during parallelized workflow. \n",
     "\n",
-    "Moreover, one can specify the list of data runs and MC samples for the analysis to run on. If left empty/ imcompatible (ie data 'A' in year 2017), it will just skip and move on.\n"
+    "Moreover, one can specify the list of data runs, MC background samples and MC signal samples for the analysis to run on by using --data, --background and --signal flag respectively. If left empty/ imcompatible (ie data 'A' in year 2017), it will just skip and move on.\n"
    ]
   },
   {
@@ -141,6 +141,114 @@
    "source": [
     "! python run_stage1_validation.py --fraction 0.001 --input_string \"Ratio_Y/LogY_Y/ShowLumi_N/Status_work\" --load_path \"/depot/cms/users/yun79/results/stage1/test/\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3506c3fc-ce59-4558-a715-ddbf6208a509",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_l = ['A', 'B', 'C', 'D']\n",
+    "bkg_l = ['DY', 'TT',]\n",
+    "sig_l = ['ggH', 'VBF']\n",
+    "# vars2plot = ['jet', 'mu', 'dimuon'] \n",
+    "vars2plot = ['jet'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd72782-62c0-4ecc-a8d2-fbc219ed7118",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "variables2plot: ['jet1_eta', 'jet2_eta', 'jet1_phi', 'jet2_phi']\n",
+      "process: data_A\n",
+      "data activated\n",
+      "process: data_B\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
+      "process: data_C\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
+      "process: data_D\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
+      "process: dy_M-50\n",
+      "DY activated\n",
+      "process: dy_M-100To200\n",
+      "DY activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_DY (Potential memory leak).\n",
+      "process: ttjets_dl\n",
+      "top activated\n",
+      "process: ttjets_sl\n",
+      "top activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_Top (Potential memory leak).\n",
+      "process: ggh_powheg\n",
+      "ggH activated\n",
+      "process: vbf_powheg\n",
+      "VBF activated\n",
+      "ratio activated\n",
+      "Name: num_hist Title: jet1_eta NbinsX: 29\n",
+      "Name: jet1_eta_hist_DY Title: jet1_eta NbinsX: 29\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs/ROOT//jet1_eta.pdf has been created\n",
+      "process: data_A\n",
+      "data activated\n",
+      "process: data_B\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
+      "process: data_C\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
+      "process: data_D\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
+      "process: dy_M-50\n",
+      "DY activated\n",
+      "process: dy_M-100To200\n",
+      "DY activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_DY (Potential memory leak).\n",
+      "process: ttjets_dl\n",
+      "top activated\n",
+      "process: ttjets_sl\n",
+      "top activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_Top (Potential memory leak).\n",
+      "process: ggh_powheg\n",
+      "ggH activated\n",
+      "process: vbf_powheg\n",
+      "VBF activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
+      "ratio activated\n",
+      "Name: num_hist Title: jet2_eta NbinsX: 29\n",
+      "Name: jet2_eta_hist_DY Title: jet2_eta NbinsX: 29\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs/ROOT//jet2_eta.pdf has been created\n",
+      "process: data_A\n",
+      "data activated\n",
+      "process: data_B\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_phi_hist_data (Potential memory leak).\n",
+      "process: data_C\n"
+     ]
+    }
+   ],
+   "source": [
+    "fraction = 0.1\n",
+    "fraction_str = str(fraction).replace('.', '_')\n",
+    "load_path = f\"/depot/cms/users/yun79/results/stage1/test_full/f{fraction_str}\"\n",
+    "! python validation_plotter_ROOT.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8f63e91-910f-4d98-83aa-c6acb8e22ae6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
