added status and no plot ratio functionality. If no ratio plots mplhep works fine, but ROOT's x label is not shown

--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -144,21 +144,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 109,
    "id": "3506c3fc-ce59-4558-a715-ddbf6208a509",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_l = ['A', 'B', 'C', 'D']\n",
-    "bkg_l = ['DY', 'TT',]\n",
+    "# data_l = ['A', 'B', 'C', 'D']\n",
+    "data_l = ['A',  'B', 'C']\n",
+    "bkg_l = ['DY','TT',]\n",
     "sig_l = ['ggH', 'VBF']\n",
     "# vars2plot = ['jet', 'mu', 'dimuon'] \n",
-    "vars2plot = ['jet'] "
+    "vars2plot = ['jet'] \n",
+    "lumi = 137.9\n",
+    "status = \"Private_Work\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "5cd72782-62c0-4ecc-a8d2-fbc219ed7118",
    "metadata": {},
    "outputs": [
@@ -166,86 +169,245 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "variables2plot: ['jet1_eta', 'jet2_eta', 'jet1_phi', 'jet2_phi']\n",
+      "variables2plot: ['jet1_pt', 'jet2_pt', 'jet1_eta', 'jet2_eta', 'jet1_phi', 'jet2_phi']\n",
       "process: data_A\n",
+      "fraction_weight: 1000.0009602331048\n",
       "data activated\n",
       "process: data_B\n",
+      "fraction_weight: 1000.0001417635383\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
+      "process: data_C\n",
+      "fraction_weight: 1000.0000818285964\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_pt_hist_data (Potential memory leak).\n",
+      "process: dy_M-50\n",
+      "fraction_weight: 1000.0041430105877\n",
+      "process: dy_M-100To200\n",
+      "fraction_weight: 1000.0043496895032\n",
+      "DY activated\n",
+      "process: ttjets_dl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "process: ttjets_sl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_pt_hist_Top (Potential memory leak).\n",
+      "process: ggh_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "ggH activated\n",
+      "process: vbf_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "VBF activated\n",
+      "ratio activated\n",
+      "Name: num_hist Title: jet1_pt NbinsX: 29\n",
+      "Name: jet1_pt_hist_DY Title: jet1_pt NbinsX: 29\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet1_pt.pdf has been created\n",
+      "process: data_A\n",
+      "fraction_weight: 1000.0009602331048\n",
+      "data activated\n",
+      "process: data_B\n",
+      "fraction_weight: 1000.0001417635383\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_pt_hist_data (Potential memory leak).\n",
+      "process: data_C\n",
+      "fraction_weight: 1000.0000818285964\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_pt_hist_data (Potential memory leak).\n",
+      "process: dy_M-50\n",
+      "fraction_weight: 1000.0041430105877\n",
+      "process: dy_M-100To200\n",
+      "fraction_weight: 1000.0043496895032\n",
+      "DY activated\n",
+      "process: ttjets_dl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "process: ttjets_sl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_pt_hist_Top (Potential memory leak).\n",
+      "process: ggh_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "ggH activated\n",
+      "process: vbf_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "VBF activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
+      "ratio activated\n",
+      "Name: num_hist Title: jet2_pt NbinsX: 29\n",
+      "Name: jet2_pt_hist_DY Title: jet2_pt NbinsX: 29\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet2_pt.pdf has been created\n",
+      "process: data_A\n",
+      "fraction_weight: 1000.0009602331048\n",
+      "data activated\n",
+      "process: data_B\n",
+      "fraction_weight: 1000.0001417635383\n",
       "data activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
       "process: data_C\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
-      "process: data_D\n",
+      "fraction_weight: 1000.0000818285964\n",
       "data activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_data (Potential memory leak).\n",
       "process: dy_M-50\n",
-      "DY activated\n",
+      "fraction_weight: 1000.0041430105877\n",
       "process: dy_M-100To200\n",
+      "fraction_weight: 1000.0043496895032\n",
       "DY activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_DY (Potential memory leak).\n",
       "process: ttjets_dl\n",
+      "fraction_weight: 1000.0\n",
       "top activated\n",
       "process: ttjets_sl\n",
+      "fraction_weight: 1000.0\n",
       "top activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_eta_hist_Top (Potential memory leak).\n",
       "process: ggh_powheg\n",
+      "fraction_weight: 1000.0\n",
       "ggH activated\n",
       "process: vbf_powheg\n",
+      "fraction_weight: 1000.0\n",
       "VBF activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
       "ratio activated\n",
       "Name: num_hist Title: jet1_eta NbinsX: 29\n",
       "Name: jet1_eta_hist_DY Title: jet1_eta NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs/ROOT//jet1_eta.pdf has been created\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet1_eta.pdf has been created\n",
       "process: data_A\n",
+      "fraction_weight: 1000.0009602331048\n",
       "data activated\n",
       "process: data_B\n",
+      "fraction_weight: 1000.0001417635383\n",
       "data activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
       "process: data_C\n",
-      "data activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
-      "process: data_D\n",
+      "fraction_weight: 1000.0000818285964\n",
       "data activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_data (Potential memory leak).\n",
       "process: dy_M-50\n",
-      "DY activated\n",
+      "fraction_weight: 1000.0041430105877\n",
       "process: dy_M-100To200\n",
+      "fraction_weight: 1000.0043496895032\n",
       "DY activated\n",
-      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_DY (Potential memory leak).\n",
       "process: ttjets_dl\n",
+      "fraction_weight: 1000.0\n",
       "top activated\n",
       "process: ttjets_sl\n",
+      "fraction_weight: 1000.0\n",
       "top activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_eta_hist_Top (Potential memory leak).\n",
       "process: ggh_powheg\n",
+      "fraction_weight: 1000.0\n",
       "ggH activated\n",
       "process: vbf_powheg\n",
+      "fraction_weight: 1000.0\n",
       "VBF activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
       "ratio activated\n",
       "Name: num_hist Title: jet2_eta NbinsX: 29\n",
       "Name: jet2_eta_hist_DY Title: jet2_eta NbinsX: 29\n",
-      "Info in <TCanvas::Print>: pdf file ./validation/figs/ROOT//jet2_eta.pdf has been created\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet2_eta.pdf has been created\n",
       "process: data_A\n",
+      "fraction_weight: 1000.0009602331048\n",
       "data activated\n",
       "process: data_B\n",
+      "fraction_weight: 1000.0001417635383\n",
       "data activated\n",
       "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_phi_hist_data (Potential memory leak).\n",
-      "process: data_C\n"
+      "process: data_C\n",
+      "fraction_weight: 1000.0000818285964\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_phi_hist_data (Potential memory leak).\n",
+      "process: dy_M-50\n",
+      "fraction_weight: 1000.0041430105877\n",
+      "process: dy_M-100To200\n",
+      "fraction_weight: 1000.0043496895032\n",
+      "DY activated\n",
+      "process: ttjets_dl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "process: ttjets_sl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet1_phi_hist_Top (Potential memory leak).\n",
+      "process: ggh_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "ggH activated\n",
+      "process: vbf_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "VBF activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
+      "ratio activated\n",
+      "Name: num_hist Title: jet1_phi NbinsX: 29\n",
+      "Name: jet1_phi_hist_DY Title: jet1_phi NbinsX: 29\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet1_phi.pdf has been created\n",
+      "process: data_A\n",
+      "fraction_weight: 1000.0009602331048\n",
+      "data activated\n",
+      "process: data_B\n",
+      "fraction_weight: 1000.0001417635383\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_phi_hist_data (Potential memory leak).\n",
+      "process: data_C\n",
+      "fraction_weight: 1000.0000818285964\n",
+      "data activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_phi_hist_data (Potential memory leak).\n",
+      "process: dy_M-50\n",
+      "fraction_weight: 1000.0041430105877\n",
+      "process: dy_M-100To200\n",
+      "fraction_weight: 1000.0043496895032\n",
+      "DY activated\n",
+      "process: ttjets_dl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "process: ttjets_sl\n",
+      "fraction_weight: 1000.0\n",
+      "top activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: jet2_phi_hist_Top (Potential memory leak).\n",
+      "process: ggh_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "ggH activated\n",
+      "process: vbf_powheg\n",
+      "fraction_weight: 1000.0\n",
+      "VBF activated\n",
+      "TROOT::Append:0: RuntimeWarning: Replacing existing TH1: dummy_hist (Potential memory leak).\n",
+      "ratio activated\n",
+      "Name: num_hist Title: jet2_phi NbinsX: 29\n",
+      "Name: jet2_phi_hist_DY Title: jet2_phi NbinsX: 29\n",
+      "Info in <TCanvas::Print>: pdf file ./validation/figs//ROOT/jet2_phi.pdf has been created\n"
      ]
     }
    ],
    "source": [
-    "fraction = 0.1\n",
+    "# fraction = 0.1\n",
+    "fraction = 0.001\n",
     "fraction_str = str(fraction).replace('.', '_')\n",
-    "load_path = f\"/depot/cms/users/yun79/results/stage1/test_full/f{fraction_str}\"\n",
-    "! python validation_plotter_ROOT.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 "
+    "load_path = f\"/depot/cms/users/yun79/results/stage1/test_full3/f{fraction_str}\"\n",
+    "# ! python validation_plotter_ROOT.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 \n",
+    "# ! python validation_plotter_unified.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 --status {status} --no_ratio\n",
+    "! python validation_plotter_unified.py --load_path {load_path} --data {' '.join(data_l)} --background {' '.join(bkg_l)} --signal {' '.join(sig_l)} --lumi 137.9 --status {status}  --ROOT_style   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a8f63e91-910f-4d98-83aa-c6acb8e22ae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dy_M-100To200  dy_M-50\tggh_powheg  ttjets_dl  ttjets_sl  vbf_powheg\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls /depot/cms/users/yun79/results/stage1/test_full/f0_001/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f63e91-910f-4d98-83aa-c6acb8e22ae6",
+   "id": "862e826a-81d7-4b76-b12f-410693b93ab6",
    "metadata": {},
    "outputs": [],
    "source": []
