muon selectrion done

--- a/quick_validation_comparison.ipynb
+++ b/quick_validation_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "76f00d86-2368-468a-8c84-0cbdba38aaae",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "id": "375b621a-e6d0-4918-8663-459d123c918d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "85a7af5a-ff70-4fa9-86de-03b2f48d853c",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "72d66e82-af3f-4e1d-aea1-e4a4d2b17068",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "f67a9125-d9cc-44c0-acc2-953440ff35dc",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "e18665aa-4659-4ca2-afac-f3912093c4d1",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "6680dea8-582c-447a-871e-13091c4c786b",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "47661fb9-4613-4840-ba7e-4efbe0ff2baf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
