checked that no events.Muon.matched_fsrPhoton are same photons with events.Electron.matched_photon

--- a/quick_validation_comparison.ipynb
+++ b/quick_validation_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "id": "76f00d86-2368-468a-8c84-0cbdba38aaae",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 2,
    "id": "375b621a-e6d0-4918-8663-459d123c918d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 3,
    "id": "85a7af5a-ff70-4fa9-86de-03b2f48d853c",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "72d66e82-af3f-4e1d-aea1-e4a4d2b17068",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "id": "f67a9125-d9cc-44c0-acc2-953440ff35dc",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "e18665aa-4659-4ca2-afac-f3912093c4d1",
    "metadata": {},
    "outputs": [],
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 7,
    "id": "6a070a9a-02b8-4156-8331-e8f56d7043e9",
    "metadata": {
     "scrolled": true
@@ -1246,9 +1246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "id": "7d618a36-99fd-419a-8bcf-42b8eea77815",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
