step3_2 geofit validated (no issues)

--- a/stage1_runner.ipynb
+++ b/stage1_runner.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "dfb8f786-37c3-428a-b1dd-d71d5a58758e",
    "metadata": {
     "editable": true,
@@ -147,22 +147,13 @@
       "  0%|                                                     | 0/1 [00:00<?, ?it/s]smaller_files: [{'root://eos.cms.rcac.purdue.edu:1094///store/mc/RunIISummer20UL18NanoAODv9/VBFHToMuMu_M125_TuneCP5_withDipoleRecoil_13TeV-powheg-pythia8/NANOAODSIM/106X_upgrade2018_realistic_v16_L1v1-v1/2820000/083C985C-C112-3B46-A053-D72C1F83309D.root': {'object_path': 'Events', 'steps': [[0, 10044]], 'uuid': 'b16b5dea-fbcd-11ed-bae7-a2a0b8bcbeef'}}]\n",
       "\n",
       "  0%|                                                     | 0/1 [00:00<?, ?it/s]\u001b[Adoing fsr!\n",
+      "total nmuons applied with fsrPhotons: 241\n",
       "fsr_filter: [False, False, False, False, False, ..., False, False, False, False, True]\n",
+      "doing geofit\n",
       "/depot/cms/kernels/coffea2024/lib/python3.10/site-packages/awkward/_nplikes/array_module.py:245: RuntimeWarning: invalid value encountered in sqrt\n",
       "  return impl(*broadcasted_args, **(kwargs or {}))\n",
-      "argmax_not_leading: [False, False, False, False, False, ..., False, False, False, False, False]\n",
-      "argmax_not_leading sum: 11\n",
-      "argmax not leading muon_fsr.pt_fsr: [[59.3, 63.3], [62.4, 63.1], [41.3, 45.8], ..., [48.8, 59.7], [73.7, 80.7]]\n",
-      "argmax_not_leading_events.Muon.fsrPhotonIdx >= 0 : \n",
-      " [[False, True], [False, True], [False, ...], ..., [False, True], [False, True]]\n",
-      "argmax_not_leading_events.Muon.matched_fsrPhoton.relIso03 < 1.8 : \n",
-      " [[None, True], [None, True], [None, True], ..., [None, True], [None, True]]\n",
-      "argmax_not_leading_events.Muon.matched_fsrPhoton.dROverEt2 < 0.012 : \n",
-      " [[None, True], [None, True], [None, True], ..., [None, True], [None, True]]\n",
-      "argmax_not_leading_events.Muon.matched_fsrPhoton.pt / argmax_not_leading_events.Muon.pt < 0.4 : \n",
-      " [[None, True], [None, True], [None, True], ..., [None, True], [None, True]]\n",
-      "abs(argmax_not_leading_events.Muon.matched_fsrPhoton.eta) < 2.4 : \n",
-      " [[None, True], [None, True], [None, True], ..., [None, True], [None, True]]\n",
+      "apply_geofit pt_corr: [[-0.0231], [-1.03, -0.0852], [0.0853], ..., [0.111, 0.306], [-10.8, 0.0464]]\n",
+      "apply_geofit abs(pt - pt_corr): [[18.6], [105, 35.7], [74.4], [...], ..., [59.1, 53.3], [68.5, 56.4], [149, 13]]\n",
       "events b4 filter length: 10044\n",
       "sumWeights: 38767.655119895935\n",
       "events after filter length: 6486\n",
@@ -172,9 +163,9 @@
       "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/vbf_powheg/0\n",
       "len(filelist): 1\n",
       "\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:45<00:00, 45.68s/it]\u001b[A\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:45<00:00, 45.68s/it]\u001b[A\n",
-      "Finished everything in 49.839 s.\n",
+      "100%|█████████████████████████████████████████████| 1/1 [00:31<00:00, 31.47s/it]\u001b[A\n",
+      "100%|█████████████████████████████████████████████| 1/1 [00:31<00:00, 31.47s/it]\u001b[A\n",
+      "Finished everything in 35.747 s.\n",
       "\u001b[0m\u001b[0m"
      ]
     }
