--- a/quick_tests/quick_validation_comparison.ipynb
+++ b/quick_tests/quick_validation_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "76f00d86-2368-468a-8c84-0cbdba38aaae",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "375b621a-e6d0-4918-8663-459d123c918d",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "85a7af5a-ff70-4fa9-86de-03b2f48d853c",
    "metadata": {},
    "outputs": [],
@@ -51,13 +51,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "id": "4a280249-27d1-48aa-8ef2-dc73f902385d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# weights_new = df_new[\"mu1_gf_filter\"].compute()\n",
+    "# print(weights_new)\n",
+    "# print(ak.num(weights_new, axis=0))\n",
+    "# weights_old = df_old[\"mu1_gf_filter\"].compute()\n",
+    "# print(weights_old)\n",
+    "# print(weights_old.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1c2c54d8-5548-4123-8abe-668ccdf32a00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binning_map = {\n",
+    "    \"pt\" : [25, 300, 50],\n",
+    "    \"eta\" : [-5, 5, 30],\n",
+    "    \"phi\" : [-3.1415, 3.1415, 101],\n",
+    "    \"mass\" : [0, 150, 100],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "72d66e82-af3f-4e1d-aea1-e4a4d2b17068",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print((region == \"h-peak\").sum())\n",
-    "# print((region == \"h-sidebands\").sum())"
+    "# \"\"\"\n",
+    "# geofit test that I gave up in the middle\n",
+    "# \"\"\"\n",
+    "# mask_old =df_old[\"mu1_gf_filter\"]\n",
+    "# mask_new = df_new[\"mu1_gf_filter\"]\n",
+    "\n",
+    "# variables = [\"mu1_gf_pt_corr\"\n",
+    "#             ]\n",
+    "# # weights_old = df_old[\"weights\"].compute()\n",
+    "# # weights_new = ak.to_numpy(df_new[\"weights\"].compute())\n",
+    "\n",
+    "\n",
+    "# for var in variables:\n",
+    "#     kin = var.split(\"_\")[-1]\n",
+    "#     binning = np.linspace(*[25, 300, 50])\n",
+    "#     # old_len = ak.num(df_old[\"mu1_pt\"].compute(), axis=0)\n",
+    "#     # new_len = ak.num(df_new[\"mu1_pt\"].compute(), axis=0)\n",
+    "#     # new_weights = np.ones(new_len)\n",
+    "#     # new_weights = new_weights*old_len/new_len\n",
+    "#     hist_old, edges = np.histogram(df_old[var][mask_old].compute(), bins=binning )\n",
+    "#     # hist_old, edges = np.histogram(df_old[var+\"_nominal\"].compute(), bins=binning )\n",
+    "    \n",
+    "#     # hist_new, _= np.histogram(df_new[region_cut][var].compute(), bins=binning , weights=new_weights)\n",
+    "#     hist_new, _= np.histogram(df_new[var][mask_new].compute(), bins=binning )\n",
+    "    \n",
+    "#     plt.stairs(hist_old, edges, label = \"df_old\")\n",
+    "#     plt.stairs(hist_new, edges, label = \"df_new\")\n",
+    "#     plt.legend(loc=\"upper right\")\n",
+    "#     plt.title(var)\n",
+    "#     plt.show()\n",
+    "#     plt.stairs((hist_new-hist_old), edges)\n",
+    "#     plt.title(var+\" diff\")\n",
+    "#     plt.show()"
    ]
   },
   {
@@ -613,17 +674,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binning_map = {\n",
-    "    \"pt\" : [25, 300, 50],\n",
-    "    \"eta\" : [-5, 5, 30],\n",
-    "    \"phi\" : [-3.1415, 3.1415, 101],\n",
-    "    \"mass\" : [0, 150, 100],\n",
-    "}"
+    "# binning_map = {\n",
+    "#     \"pt\" : [25, 300, 50],\n",
+    "#     \"eta\" : [-5, 5, 30],\n",
+    "#     \"phi\" : [-3.1415, 3.1415, 101],\n",
+    "#     \"mass\" : [0, 150, 100],\n",
+    "# }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "6680dea8-582c-447a-871e-13091c4c786b",
    "metadata": {
     "scrolled": true
@@ -808,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "47661fb9-4613-4840-ba7e-4efbe0ff2baf",
    "metadata": {
     "scrolled": true
