step 4.2 validated L1 prefiring wgts

--- a/stage1_runner.ipynb
+++ b/stage1_runner.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "dfb8f786-37c3-428a-b1dd-d71d5a58758e",
    "metadata": {
     "editable": true,
@@ -158,13 +158,14 @@
       "events after filter length: 6486\n",
       "cross_section: 0.0008210722\n",
       "integrated_lumi: 59970.0\n",
+      "weight statistics: {'genWeight': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'genWeight_normalization': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'xsec': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'lumi': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'pu': {'sumw': dask.awkward<sum, type=Scalar, dtype=float64>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float64>, 'minw': dask.awkward<min, type=Scalar, dtype=float64>, 'maxw': dask.awkward<max, type=Scalar, dtype=float64>}, 'l1prefiring': {'sumw': dask.awkward<sum, type=Scalar, dtype=float32>, 'sumw2': dask.awkward<sum, type=Scalar, dtype=float32>, 'minw': dask.awkward<min, type=Scalar, dtype=float32>, 'maxw': dask.awkward<max, type=Scalar, dtype=float32>}}\n",
       "weights: 6486\n",
       "save_path: /depot/cms/users/yun79/results/stage1/test_full2/2018/f1_0/vbf_powheg/0\n",
       "len(filelist): 1\n",
       "\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:28<00:00, 28.37s/it]\u001b[A\n",
-      "100%|█████████████████████████████████████████████| 1/1 [00:28<00:00, 28.37s/it]\u001b[A\n",
-      "Finished everything in 32.583 s.\n",
+      "100%|█████████████████████████████████████████████| 1/1 [00:31<00:00, 31.01s/it]\u001b[A\n",
+      "100%|█████████████████████████████████████████████| 1/1 [00:31<00:00, 31.01s/it]\u001b[A\n",
+      "Finished everything in 35.777 s.\n",
       "\u001b[0m\u001b[0m"
      ]
     }
